<resources>
    <string name="app_name">seun_calculator</string>
    <string name="calculator_vast">Calculator-Vast</string>
    <string name="clear_text">C</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_decimal">.</string>
    <string name="percentage">%</string>
    <string name="equals">=</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiplication">x</string>
    <string name="division">÷</string>
    <string name="delete">DEL</string>
    <string name="clear_entry">CE</string>
    <string name="default_value">0.0</string>
</resources>